--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,13 @@
     "@heroicons/react": "^2.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "vite": "^5.4.20"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.0.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "vite": "^5.4.20"
+    "tailwindcss": "^3.4.17"
   }
 }
